[package]
name = "odbc-iter"
version = "0.2.6-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "High level database access library based on 'odbc' crate that uses native ODBC drivers to access variety of databases"
repository = "https://github.com/jpastuszek/odbc-iter"
documentation = "https://docs.rs/odbc-iter"
readme = "README.md"
keywords = ["odbc", "orm", "database"]
categories = ["database"]
license = "MIT"
edition = "2018"

[features]
default = ["chrono"]
test-hive = []
test-sql-server = []
test-monetdb = []

[dependencies]
odbc = "0.13.0"
regex = "1.1.0"
lazy_static = "1.2.0"
log = "0.4.6"
error-context = "0.1.0"
chrono = { version = "0.4.6", optional = true }
serde = { version = "1.0.88", optional = true }
serde_json = { version = "1.0.39", optional = true }
rust_decimal = { version = "1.1.0", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
serde_json = "1.0.39"
